OpenVDB Version History
=======================

Version 7.0.0 - In development

    Improvements:
    - The minimum ABI for OpenVDB is now always enforced through CMake
      separately from other minimum dependency version variables.
    - Added support for CMake 3.12 compatible Xxx_ROOT variables.
    - Replaced the CMake USE_SYSTEM_LIBRARY_PATHS option with
      DISABLE_CMAKE_SEARCH_PATHS and removed the hard coded list of
      SYSTEM_LIBRARY_PATHS in favor of using CMake's default search procedure.
      SYSTEM_LIBRARY_PATHS can still be used as a global list of paths for all
      dependency searches.
    - Improvements to OpenVDB's CMake module setup order in regards to CMake
      policy, minimum version and project calls.

    Python:
    - Removed the requirement of CMake 3.14 for NumPy usage.
    - Added support for Boost versions 1.65 and later when building
      the Python module with NumPy support through CMake.
    - Improved CMake Python3 support.

    Houdini:
    - Fixed a bug in the Points Convert SOP during conversion from
      Houdini geometry to OpenVDB Points, where point group information
      could end up corrupted or cause a crash with non-contiguous
      point offsets (mesh inputs).
    - Threaded the population of point group memberships during conversion
      from Houdini geometry to OpenVDB Points


Version 6.2.1 - September 30, 2019

    Bug fixes:
    - Fixed a crash that arose from an inadvertent ABI change of an I/O class
      with the 6.2.0 release.  The crash occured when attempting to write out
      a point data grid using an I/O routine from a different version of
      OpenVDB than the one with which the grid was authored and when
      one of those OpenVDB versions was 6.2.0.


Version 6.2.0 - September 18, 2019

    New features:
    - Added tools::FindActiveValues, which counts the active values
      in a tree that intersect a given bounding box.