@@ -140,6 +140,8 @@ public:
 
     openvdb::Index treeDepth() const override { return 0; }
     openvdb::Index leafCount() const override { return 0; }
+    std::unique_ptr<std::vector<openvdb::Index32>> nodeCount() const override
+        { return std::unique_ptr<std::vector<openvdb::Index32>>(new std::vector<openvdb::Index32>(DEPTH, 0)); }
     openvdb::Index nonLeafCount() const override { return 0; }
     openvdb::Index64 activeVoxelCount() const override { return 0UL; }
     openvdb::Index64 inactiveVoxelCount() const override { return 0UL; }
