@@ -7,6 +7,11 @@
 <B>Version 7.0.0</B> - <I>In development</I>
 
 @par
+New features:
+- Added @vdblink{tree::Tree::nodeCount,Tree::nodeCount}, which counts
+  the number and type of nodes in a tree very efficiently.
+
+@par
 Improvements:
 - The minimum ABI for OpenVDB is now always enforced through CMake
   separately from other minimum dependency version variables.
