@@ -3,6 +3,10 @@ OpenVDB Version History
 
 Version 7.0.0 - In development
 
+    New features:
+    - Added Tree::nodeCount, which counts the number and type of nodes
+      in a tree very efficiently.
+
     Improvements:
     - The minimum ABI for OpenVDB is now always enforced through CMake
       separately from other minimum dependency version variables.
